--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,40 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/connect"
     tools:context=".LoginActivity">
 
-    <com.facebook.login.widget.LoginButton
+    <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:id="@+id/fb_login"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="212dp"
+        android:layout_height="36dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        facebook:com_facebook_login_text="Đăng nhập" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/gg_login"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="174dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="76dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fb_login" />
-
-    <Button
-        android:id="@+id/sign_out"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="87dp"
-        android:layout_marginLeft="87dp"
-        android:layout_marginTop="51dp"
-        android:text="Sign out"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gg_login" />
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_gravity="start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/fb_login"
+        app:layout_constraintStart_toStartOf="@+id/fb_login"
+        app:layout_constraintTop_toBottomOf="@+id/fb_login"
+        app:layout_constraintVertical_bias="0.191" />
 
 </android.support.constraint.ConstraintLayout>
